# soapxx

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: FindGSL.cmake  FindMKL.cmake  FindNumpy.cmake  FindPython.cmake
cmake/FindPython/: Support.cmake
cxx_tests/: CMakeLists.txt  build.sh  gtest.sh
cxx_tests/cmake/: FindGTEST.cmake  FindSOAP.cmake
cxx_tests/src/: CMakeLists.txt  gtest_basis.cpp  gtest_cutoff.cpp  gtest_defines.hpp  gtest_dylm.cpp  gtest_functions.cpp  gtest_options.cpp  gtest_power.cpp  gtest_radialbasis.cpp  test_dylm.cpp  test_dylm.py  test_functions.cpp  test_functions.py
examples/dmap_minimal/: example.py
examples/dmap_multikernel/: example.py
examples/molecular_kernel/: README.md  kernel-compute.json  kernel-compute.py  run.sh
examples/molecular_kernel/data/: structures.xyz
examples/type_embedding/: example.py  typemap.json
py_tests/src/: unittest_kernelgradient.py
src/: CMakeLists.txt  SOAPRC.in  __init__.py  angularbasis.cpp  angularbasis.hpp  atomicspectrum.cpp  atomicspectrum.hpp  basis.cpp  basis.hpp  bindings.cpp  bindings.hpp  boundary.cpp  boundary.hpp  cutoff.cpp  cutoff.hpp  functions.cpp  functions.hpp  globals.cpp  globals.hpp  options.cpp  options.hpp  power.cpp  power.hpp  radialbasis.cpp  radialbasis.hpp  spectrum.cpp  spectrum.hpp  structure.cpp  structure.hpp  types.hpp
src/base/: exceptions.hpp  logger.hpp  objectfactory.hpp
src/linalg/: CMakeLists.txt  bindings.cpp  bindings.hpp  matrix.cpp  matrix.hpp  operations.cpp  types.hpp
src/linalg/gsl/: operations.cpp
src/linalg/mkl/: operations.cpp
src/soap/: CMakeLists.txt  SOAPRC.in  __init__.py  angularbasis.cpp  angularbasis.hpp  atomicspectrum.cpp  atomicspectrum.hpp  basis.cpp  basis.hpp  bindings.cpp  bindings.hpp  boundary.cpp  boundary.hpp  cgraph.cpp  cgraph.hpp  contraction.cpp  contraction.hpp  coulomb.cpp  coulomb.hpp  cutoff.cpp  cutoff.hpp  dmap.cpp  dmap.hpp  fieldtensor.cpp  fieldtensor.hpp  functions.cpp  functions.hpp  globals.cpp  globals.hpp  kernel.cpp  kernel.hpp  mol2d.cpp  mol2d.hpp  npfga.cpp  npfga.hpp  options.cpp  options.hpp  power.cpp  power.hpp  radialbasis.cpp  (+6 more)
src/soap/base/: CMakeLists.txt  exceptions.hpp  logger.hpp  rng.cpp  rng.hpp  tokenizer.hpp
src/soap/linalg/: CMakeLists.txt  __init__.py  bindings.cpp  bindings.hpp  kernel.hpp  matrix.cpp  matrix.hpp  numpy.hpp  operations.hpp  types.hpp  vec.hpp  wigner.cpp  wigner.hpp
src/soap/linalg/gsl/: operations.cpp
src/soap/linalg/mkl/: operations.cpp
src/soap/linalg/permanent/: CMakeLists.txt  __init__.py  permanent.cpp
src/soap/soapy/: CMakeLists.txt  __init__.py  cgraph.py  defaults.py  dimred.py  dmap.py  elements.py  embedding.py  fgraph.py  geodesic.py  graph.py  gylm.py  kernel.py  lagraph.py  lamatch.py  learn.py  math.py  momo.py  nn.py  npfga.py  npthreads.py  pca.py  tnn.py  tuples.py  tuplex.py  tuplex_utils.py  util.py  wrap.py
src/soap/tools/: CMakeLists.txt  __init__.py  ase_io.py  extract.py  inverse.py  loadwrite.py  loadwrite.py~  partition.py  ptable.py  transformations.py
src/tools/: CMakeLists.txt  __init__.py  extract.py  inverse.py  loadwrite.py
test/: test.py  vmdrender.py  vmdtools.py
test/configs/: config_000000.xyz  config_000057.xyz  config_000229.xyz  config_000308.xyz  config_001759.xyz
test/test_attribute_left/: test.py
test/test_cgraph/: test.py
test/test_dmap_convolve/: structures.xyz  test.py
test/test_dmap_gradients/: structures.xyz  test.py  test_kernel.py
test/test_forcefield/: 0_explore.py  0_explore_3body.py  0_explore_lj.py  0_interact.py  0_triangulate.py  plot_tree.py  simspace.py  symmetrize.py
test/test_forcefield/in.hex.configs/: config_06_a.xyz  config_06_b.xyz  config_06_c.xyz
test/test_gradients/: test.py
test/test_gylm/: structures.xyz  test.py
test/test_harmonicnet/: network.py
test/test_integrals/: learn.py  process.py
test/test_invert/: test.py
test/test_invert_standalone/: test.py  visualise.py
test/test_kernelpot/: config.xyz  kernel.py  map_energy.py  map_energy_global.py  map_steep.py  test.py
test/test_multiprocessing/: process.py
test/test_nldimred/: in.kernelpot.ix.txt  nldimred.py
test/test_nn/: test.py
test/test_nomadsim/: run.py
test/test_nomadsim/data/: structures.xyz
test/test_npfga/: diagram.py  run_booster.py  run_npfga.py  run_pca.py
test/test_particle_collection/: test.py
test/test_pca/: config_pca.py  eigenstructures.py  pca.py
test/test_pca_norm/: 0_compute_pca.py  1_find_eigenstructures.py
test/test_sampling/: 0_sample.py  dimred.py  symmetrize.py
test/test_serialization/: test.py
test/test_types/: pair_1_185.xyz  test.py
tools/: CMakeLists.txt  testmap.cpp
web/fgraph2svg/: README  fgraph2json.py  index.html  serve.sh
web/fgraph2svg/css/: fonts.css  npfga.css  slider.css
web/fgraph2svg/fgraph2json/: include.py
web/fgraph2svg/js/: dictionary.js  utils.js
