install(FILES 
    __init__.py 
    gylm.py
    geodesic.py 
    tuplex.py 
    tuplex_utils.py 
    tuples.py 
    tnn.py
    nn.py 
    dmap.py 
    cgraph.py 
    fgraph.py 
    embedding.py 
    wrap.py 
    defaults.py 
    npfga.py 
    graph.py 
    learn.py 
    elements.py 
    util.py 
    npthreads.py 
    kernel.py 
    simspace.py 
    pca.py 
    dimred.py 
    lagraph.py 
    lamatch.py 
    math.py 
    momo.py 
    DESTINATION ${LOCAL_INSTALL_DIR}/soapy)

